Fixed spacing between section1 of page and the top of the webpage

--- a/index-styler.css
+++ b/index-styler.css
@@ -1,7 +1,9 @@
 body,
 html {
+  overflow: auto;
   margin: 0 0 0 0;
-  font-family: arial, sans-serif;
+  padding: 0 0 0 0;
+  font-family: "Lucida Console", "Courier New", monospace;  
   scroll-behavior: smooth;
 }
 #header {
@@ -9,6 +11,7 @@ html {
   position: fixed;
   left: 0;
   top: 0;
+  justify-content:flex-start;
 }
 .container {
   width: 95%;
@@ -16,14 +19,15 @@ html {
 }
 
 #header .container {
-  padding-top: 3%;
   display: flex;
   justify-content: space-between;
-  align-items: top;
+  
 }
 #header .container h1 {
-  color: #fff;
-  padding-left: 2%;
+  color: #666699;
+  padding-top: 2%;
+  margin-top: 0;
+  padding-left: 0;
 }
 
 .main-nav {
@@ -48,16 +52,23 @@ html {
   text-decoration: none;
   color: #fff;
 }
+section {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 
 #home {
+  overflow: auto;
   max-width: 100%;
   height: 125%;
   vertical-align: top;
   background-image: url("/images/banner1.png");
+  
 }
 
 #home p {
-  color: #fff;
+  color: #666699;
 }
 #about {
   max-width: 100%;
